18397
```
Welcome to Scala version 2.10.2 (Java HotSpot(TM) 64-Bit Server VM, Java 1.7.0_17).
Type in expressions to have them evaluated.
Type :help for more information.

scala> class Foo(arg1: String, test: Boolean = false) {
     | def this(arg1: Int, test: Boolean = false) = this(arg1.toString, test)
     | }
<console>:8: error: double definition:
method <init>$default$2:=> Boolean and
method <init>$default$2:=> Boolean at line 7
have same type
       def this(arg1: Int, test: Boolean = false) = this(arg1.toString, test)
                           ^

scala> class Foo(arg1: String, test: String = "false") {
     | def this(arg1: Int, test: Boolean = false) = this(arg1.toString, test.toString)
     | }
defined class Foo
```
